# nix-update-git

./: AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  release.yml
doc/: design.md
docs/: CONTRIBUTING_TESTS.md  PLAN.md  plan.md
nix-prefetch-git/: Cargo.toml  README.md
nix-prefetch-git/src/: lib.rs  nar.rs
src/: check.rs  cli.rs  lib.rs  main.rs  output.rs  patch.rs
src/parser/: ast.rs  mod.rs  tests.rs
src/rules/: fetcher.rs  flake_input.rs  mk_derivation.rs  mod.rs  traits.rs
src/rules/derivation/: core.rs  mod.rs
src/rules/fetcher/: git_fetch.rs  kind.rs  mod.rs  patch_url.rs  source_url.rs  tarball.rs
src/utils/: fetch.rs  mod.rs  nar.rs  patch.rs  prefetch.rs  tarball.rs  version.rs
tests/: fetcher_test.rs  flake_input_test.rs  mod.rs
tests/rules/: build_vim_plugin_test.rs  fetcher_test.rs  flake_input_test.rs  mk_derivation_test.rs  mod.rs
tests/rules/common/: mod.rs
tests/snapshot/: main.rs  mod.rs
tests/snapshot/data/fetcher/: arkenfox_user_js_hash.nix  arkenfox_user_js_hash_pin.nix  arkenfox_user_js_two_component_version.nix  arkenfox_user_js_version_hash_no_update.nix  bitbucket_atlassian_rest_hash.nix  codeberg_scdoc_hash.nix  forgejo_scdoc_hash.nix  gitea_act_hash.nix  gitiles_avb_hash.nix  gitlab_procps_hash.nix  repoorcz_girocco_hash.nix  sourcehut_scdoc_hash.nix  yuxqiu_nix_update_git_builtins_fetch_git.nix  yuxqiu_nix_update_git_detects_update.nix  yuxqiu_nix_update_git_fetch_from_github_hash.nix  yuxqiu_nix_update_git_fetch_from_github_sha256_field.nix  yuxqiu_nix_update_git_fetchgit.nix  yuxqiu_nix_update_git_fetchgit_hash.nix  yuxqiu_nix_update_git_no_update_when_latest.nix  yuxqiu_nix_update_git_pinned.nix  yuxqiu_nix_update_git_tag_attribute.nix
tests/snapshot/data/fetchgit_parity/: pinned_branch_name.nix  pinned_commit_hash.nix  pinned_deep_clone.nix  pinned_deep_clone_leave_dot_git.nix  pinned_deep_clone_submodules_leave_dot_git.nix  pinned_leave_dot_git.nix  pinned_root_dir.nix  pinned_sha256_field.nix  pinned_sparse_checkout.nix  pinned_submodules.nix  pinned_submodules_leave_dot_git.nix  pinned_tag_ref.nix
tests/snapshot/data/fetchpatch/: codeberg_follow_branch.nix  filled_hash_no_update.nix  github_commit_pinned_no_update.nix  github_commit_sha_no_update.nix  github_compare_follow_branch.nix  github_compare_sha_head_no_update.nix  github_compare_version_update.nix  github_follow_branch.nix  github_follow_branch_existing_hash.nix  gitlab_compare_version_update.nix  gitlab_follow_branch.nix  pinned_github_commit_hash.nix  pinned_github_commit_sha256.nix  pinned_github_commit_strip.nix  pinned_github_compare_hash.nix  pinned_github_curl_opts.nix  pinned_github_curl_opts_list.nix  pinned_github_download_to_temp.nix  pinned_github_excludes.nix  pinned_github_executable.nix  pinned_github_extra_prefix.nix  pinned_github_hunks.nix  pinned_github_includes.nix  pinned_github_multi_file_hash.nix  pinned_github_multi_file_patch.nix  pinned_github_netrc_impure_env_vars.nix  pinned_github_netrc_phase.nix  pinned_github_output_hash.nix  pinned_github_output_hash_algo_skip.nix  pinned_github_patch.nix  pinned_github_patch_sha256.nix  pinned_github_revert.nix  (+9 more)
tests/snapshot/skipped/: excalidraw_mcp_complex_mk_derivation.nix  upstream_fetchgit_deep_clone.nix
(+145 files in other folders)
