[package]
name = "nix-update-git"
version = "0.2.2"
edition = "2024"

[lib]
name = "nix_update_git"
path = "src/lib.rs"

[[bin]]
name = "nix-update-git"
path = "src/main.rs"

[dependencies]
rnix = "0.11"
rowan = "0.15"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
versions = "7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
rayon = "1"

[features]
network-tests = []

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
insta = { version = "1", features = ["glob"] }
regex = "1"
