[workspace]
members = [".", "nix-prefetch-git"]
resolver = "3"

[workspace.dependencies]
tempfile = "3.10"

[package]
name = "nix-update-git"
version = "0.6.1"
edition = "2024"

[lib]
name = "nix_update_git"
path = "src/lib.rs"

[[bin]]
name = "nix-update-git"
path = "src/main.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot/main.rs"
harness = false

[dependencies]
rnix = "0.11"
rowan = "0.15"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
versions = "7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
rayon = "1"
flate2 = "1"
tar = "0.4"
ureq = "3"
patchkit = "0.2"
tempfile = { workspace = true }
nix-prefetch-git = { path = "nix-prefetch-git" }
gix-quote = "0.7"
bstr = "1"
globset = "0.4"
regex = "1"
semver = "1"

[features]
network-tests = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
insta = { version = "1", features = ["glob"] }
libtest-mimic = "0.8"
regex = "1"
