[package]
name = "nix-prefetch-git"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust reimplementation of nix-prefetch-git for computing NAR hashes of git checkouts"
license = "MIT"
repository = "https://github.com/yuxqiu/nix-update-git"
homepage = "https://github.com/yuxqiu/nix-update-git"

[dependencies]
base64 = "0.22"
nix-base32 = "0.2"
nix-nar = "0.3"
sha2 = "0.10"
tempfile = { workspace = true }
